fixed some alignment issues

--- a/css/index.scss
+++ b/css/index.scss
@@ -638,6 +638,9 @@ nav ul li {
         width: 100%;
     }
     
+    .box-align {
+        margin-left: 10px;
+    }
     .box-text {
         margin-left: 0%;
         max-width: 310px;
@@ -651,7 +654,6 @@ nav ul li {
     .nav-sec-1 {
         min-height: 25px;
     }
-    
     
 
     .list-text {
@@ -667,6 +669,9 @@ nav ul li {
         display: block;
     }
 
+    .sec-5-mobile {
+        display: block;
+    }
     .mobile-text {
         font-size: 12px;
         text-align: center;
